<resources>
    <string name="app_name">LAS BRISAS</string>
    <string name="trust_our_splendid_conference_hall_to_success_your_event_to_hold_a_grand_conference_with_graceful_manner_make_a_everlasting_impression_on_your_business_partner_grab_the_chance_to_make_marvelous_event">Trust our splendid conference hall to success your event.To hold a grand conference with graceful manner.Make a everlasting impression on your business partner.Grab the chance to make marvelous event.</string>
    <string name="facilities_capacity_up_to_100_private_board_room_natural_lights_free_wifi"><![CDATA[Facilities \n->Capacity up to 100 \n->Private Board Room \n->Natural Lights \n->Free Wifi]]></string>
    <string name="banquet_conference_request_form"><![CDATA[Banquet & Conference Request Form]]></string>
    <string name="pitcher_snacks"><![CDATA[Pitcher & Snacks]]></string>
    <string name="pitchers_snacks"><![CDATA[Pitcher & Snacks]]></string>
    <string name="las_brisas">LAS BRISAS</string>
    <string name="special_offers">Special Offers</string>
    <string name="high_tea">High Tea</string>
    <string name="banquet_halls">Banquet Halls</string>
    <string name="aquarium_hall">Aquarium Hall</string>
    <string name="lotus_hall">Lotus Hall</string>
    <string name="lavender_ballroom">Lavender Ballroom</string>
    <string name="enjoy_your_special_day_at_our_elegant_ballroom_with_a_separate_dance_floor_lavender_ballroom_offers_a_luxurious_ambience_to_make_a_awesome_occassion">Enjoy your special day at our elegant ballroom with a separate dance floor.Lavender ballroom offers a luxurious ambience to make a awesome occassion.</string>
    <string name="facilities_capacity_up_to_500_exceptional_cuisine_superior_lighting"><![CDATA[Facilities \n->Capacity up to 500 \n->Exceptional cuisine \n->Superior Lighting]]></string>
    <string name="grand_ballroom">Grand Ballroom</string>
    <string name="conference"><![CDATA[Facilities\n ->Capacity up to 60\n ->Private board room \n->private garden]]></string>
    <string name="restaurant_bar"><![CDATA[Restaurant & Bar >]]></string>
    <string name="famous_high_tea_is_back_now_come_join_us_buffed_price_at_rs_1800_net_per_person">Famous high tea is back now.Come join us.Buffed price at Rs.1800/= net per person</string>
    <array name="eventType">
        <item>Wedding</item>
        <item>Business</item>
    </array>
    <string name="Gtitle">"Moment of Pleasure And Luxury "</string>
    <string name="Gtitle2">Taste</string>
    <string name="headline1">Room and Suites</string>
    <string name="headline2">Halls</string>
    <string name="headline3">Swimming pool</string>
    <string name="headline4">Dining</string>
    <string name="headline5">Spa</string>
    <string name="title">Name</string>
    <string name="title2">E-mail</string>
    <string name="title3">Feedback</string>
    <string name="btn">Send Feedback</string>
    <string name="textV">Type name....</string>
    <string name="textV2">Type email....</string>
    <string name="textV3">Type here....</string>
    <string name="title4">Phone No</string>
    <string name="title5">Package</string>
    <string name="title6">Requested Date</string>
    <string name="title7">Appointment Time</string>
    <string name="textV4">phone number</string>
    <string name="textV5">name</string>
    <string name="textV6">email</string>
    <string name="textV7">Select</string>
    <string-array name="Packages">
        <item>Intensive Package</item>
        <item>Wellness Package</item>
        <item>Soft Package</item>
    </string-array>
    <string name="textV8">time</string>
    <string name="textV9">dd/mm/yy</string>
    <string name="btn2">Book Now</string>
    <string name="headL">Relaxing  And  Soothing</string>
    <string name="headL2">Luxury  Life</string>
    <string name="btn3">View More</string>
    <string name="label1">Intensive Ayurveda Package</string>
    <string name="label2">Wellness Ayurveda Package</string>
    <string name="label3">Soft Ayurveda Package</string>
    <string name="label4">Rs : 5000</string>
    <string name="label5">Rs : 6000</string>
    <string name="label6">Rs : 3000</string>
    <string name="text_paragraph">Inclusions of the package :</string>
    <string name="tView1">>   Four full-body massages  – 60 minutes</string>
    <string name="tView2">>   Herbal Pichu</string>
    <string name="tView3">>   An herbal bath – 20 minutes</string>
    <string name="tView4">>   A Chakra massage – 45 minutes</string>
    <string name="tView5">>   A Shirodhara therapy – 60 minutes</string>
    <string name="tView6">>   An herbal facial or herbal scrub – 35 minutes</string>
    <string name="tView9">LKR 5000  per person</string>
    <string name="tView7">LKR 6000 per person</string>
    <string name="tView8">LKR 3000 per person</string>
    <string name="tView10">>   Two gym sessions</string>
    <string name="tView">>   Four Hatha yoga and meditation sessions</string>
    <string name="butn1">Send</string>
    <string name="butn2">SHOW</string>
    <string name="butn3">UPDATE</string>
    <string name="butn4">DELETE</string>
    <string name="butn5">BOOK NOW</string>
    <string name="Triple_room">Triple room</string>
    <string name="detail">Triple Room have a minimum of 2 opening windows.with double bed and single bed facilities.and also this room have a small siting area</string>
    <string name="facilities">Room facilities</string>
    <string name="family_room1">Family Room</string>
    <string name="detail1">family Room offers space and comfort with thoughtful cotempory design and local srilankan touches</string>
    <string name="economy_room1">Economy Room</string>
    <string name="detail2">We have economy rooms available for solo travelers or those wishing to have their own privacy.These are comforatable with a large double bed have their own suits.All have plenty of light and windows are nicely finished.this is most comfortable for  two persons
</string>
    <string name="msg1">Send Us a Message</string>
    <string name="Name2roid">Name</string>
    <string name="Email">Email</string>
    <string name="contcatNo">Contact No</string>
    <string name="message">Message</string>
    <string name="standard_room1">Standard Room</string>
    <string name="detail3">Standard Room have a minimum of 2 opening windows.with double bed facilities.and also this room have a small siting area</string>
    <string name="facility">Room Facilities</string>
    <string name="standard_room">Standard Room</string>
    <string name="economy_room">Economy Room</string>
    <string name="triple_room">Triple Room</string>
    <string name="family_room">Family Room</string>
    <string name="book_now">Book Now</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="noofrooms">No of rooms</string>
    <string name="no_of_kids">NoOfKids</string>
    <string name="msg2">\"Your reservation deleted successfully\"</string>
    <string name="search">Btnsearch</string>
    <string name="btnsearch">Search booking</string>
    <string name="room_name">Room name</string>
    <string name="Roomshow">Show</string>
    <string name="Roomupdate">Update</string>
    <string name="Roomdelete">Delete</string>
    <string name="textView">Payment Successfull                 Enjoy the day</string>
    <string name="textView1">Select payment method</string>
    <string name="tname">Name</string>
    <string name="textView2">Date</string>
    <string name="textView3">Amount</string>
    <string name="textView5">Enter Card details</string>

    <string name="textView8">Card number</string>
    <string name="textView9">Expiry Date</string>
    <string name="textView6">Security code</string>
    <string name="Name">enter customer name</string>
    <string name="Date">enter payment date</string>
    <string name="name">enter name</string>
    <string name="date">please enter payment date</string>
    <string name="amount">enter payment amount</string>
    <string name="cname">enter card holder name</string>
    <string name="cnumber">enter card number</string>
    <string name="edate">enter expiry date of card</string>
    <string name="bsave">SAVE PAYMENT DETAILS</string>
    <string name="bshow">SHOW DETAILS</string>
    <string name="bconfirm">CONFIRM</string>
    <string name="bupdate">UPDATE DETAILS</string>
    <string name="bdelete">DELETE PAYMENT</string>
    <string name="Bconfirm">Confirm your payment</string>


    <string name="Tdessert">Dessert</string>
    <string name="tsandwich">Sandwich</string>
    <string name="textsandwich1">French fries club sandwich</string>
    <string name="textsandwich2">Chicken club sandwich</string>
    <string name="textsandwixh3">veg grilled sandwich</string>
    <string name="textmain1">Grilled salmon with Avacado greek salsa and Orzo</string>
    <string name="textrice3">Fish Biriyani  price=Rs300.00</string>
    <string name="textmain4">"Pastelon (Puerto Rican Lasangna) "</string>
    <string name="textdessert3">Geteaux Archives</string>
    <string name="textwhisky">Whisky</string>
    <string name="textwine2">" WARWICK                             THREE CAPE LADIES"</string>
    <string name="textwhisky1">Johnnie Walker Black Lable</string>
    <string name="textwhisky2">Johnnie Walker Gold Lable Reserve</string>
    <string name="textdessert4">Watalappan</string>
</resources>