<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lavender_Ballroom">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView6"
        android:layout_width="281dp"
        android:layout_height="177dp"
        android:src="@drawable/w1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="173dp"
        android:layout_height="43dp"
        android:text="@string/lavender_ballroom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <EditText
        android:id="@+id/editTextTextMultiLine5"
        android:layout_width="301dp"
        android:layout_height="133dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/enjoy_your_special_day_at_our_elegant_ballroom_with_a_separate_dance_floor_lavender_ballroom_offers_a_luxurious_ambience_to_make_a_awesome_occassion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <EditText
        android:id="@+id/editTextTextMultiLine6"
        android:layout_width="242dp"
        android:layout_height="108dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/facilities_capacity_up_to_500_exceptional_cuisine_superior_lighting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />
</androidx.constraintlayout.widget.ConstraintLayout>